# modules_example

./: .clang-format  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
modules/: calculating.cppm  geometry.cppm  geometry.h  printing.cppm
